@@ -1,7 +1,7 @@
 package games.strategy.triplea.settings;
 
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 
 final class PathClientSetting extends ClientSetting<Path> {
@@ -20,15 +20,15 @@ final class PathClientSetting extends ClientSetting<Path> {
 
   @Override
   protected Path decodeValue(final String encodedValue) {
-    return Paths.get(encodedValue);
+    return Path.of(encodedValue);
   }
 
   @Override
   public Optional<String> validateValue(final Path value) {
-    if (!value.toFile().exists() || !value.toFile().canWrite()) {
+    if (!Files.exists(value) || !Files.isWritable(value)) {
       return Optional.of(
           "Invalid path, does not exist or cannot be written (permissions): "
-              + value.toFile().getAbsolutePath());
+              + value.toAbsolutePath());
     } else {
       return Optional.empty();
     }
